# dret

./: .gitignore  CMakeLists.txt  README.md
benchmark/: bm_query_doc_freq_index.cpp  build_bm.sh  csa_wrapper.h  doc_isas_wrapper.h  factory.h  query_doc_freq_idx_bm.cpp  query_doc_freq_index_bm.cpp  run_bm.sh  sa_wrapper.h
cmake/: ConfigGrammar.cmake
include/dret/: algorithm.h  df_brute.h  doc_freq_index.h  doc_freq_index_brute.h  doc_freq_index_gcda.h  doc_freq_index_rmq.h  doc_freq_index_sada.h  doc_freq_index_wt.h  run_length_encode.h  tf.h
test/: algorithm_test.cpp  df_brute_test.cpp  doc_freq_index_brute_test.cpp  tf_test.cpp
tool/: build_items.cpp  build_items_gcda.cpp  build_items_ilcp.cpp  build_items_sada.cpp  create_dataset.py  definitions.h  pattern_info.cpp  slides.py
